# to-do-it

./: .gitignore  README.md  pyproject.toml  requirements.txt
fonte/: __main__.py
fonte/aplicacao/: operacoes.py
fonte/apresentacao/: app.py  barra_superior.py  botao_arrendodado.py  fontes.py  item_tarefa.py  listas.py  painel_botoes.py  paleta.py  popups.py
fonte/dominio/: excecoes.py  tarefa.py  tipos.py
fonte/infraestrutura/: buffer.py  operacoes_bd.py  tarefas.db
fonte/to_do_it.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
testes/: conftest.py  test_buffer.py  test_op_bd.py  test_tarefa.py  test_tipos.py
